# EDA_Agent

./: .gitignore  README.md  REFLECTION.md  app.py  prices.csv  pyproject.toml
models/: baseline_model.cbm
reports/: report_25-04-2026_05-26.md  report_25-04-2026_05-27.md
tools/: analyze_dataset.py  save_report.py  train_baseline.py
