[project]
name = "eda-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "smolagents>=1.24.0",
]
